--- a/RuC.WPF/packages.config
+++ b/RuC.WPF/packages.config
@@ -3,4 +3,17 @@
   <package id="ControlzEx" version="3.0.2.4" targetFramework="net40" />
   <package id="jacobslusser.ScintillaNET" version="3.6.3" targetFramework="net40" />
   <package id="MahApps.Metro" version="1.6.5" targetFramework="net40" />
+  <package id="Xceed.Products.Wpf.Toolkit.AvalonDock.Themes" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.Aero" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.Metro" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.MetroAccent" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.Office2007" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.VS2010" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.AvalonDock.Themes.Windows10" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.Themes" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.Themes.Metro" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.Themes.Office2007" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.Themes.Windows10" version="3.8.19076.18510" targetFramework="net40" />
+  <package id="Xceed.Wpf.Toolkit" version="3.8.19076.18510" targetFramework="net40" />
 </packages>
