--- a/RuC.WPF/app.config
+++ b/RuC.WPF/app.config
@@ -8,7 +8,7 @@
     <userSettings>
         <RuC.WPF.Properties.Settings>
             <setting name="DefaultLanguage" serializeAs="String">
-                <value>ru-RU</value>
+                <value>en-US</value>
             </setting>
         </RuC.WPF.Properties.Settings>
     </userSettings>
