Change Break to Stop

--- a/RuC.WPF/RuC.WPF.csproj
+++ b/RuC.WPF/RuC.WPF.csproj
@@ -187,6 +187,9 @@
     <Resource Include="Images\ImageDebugBreak.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\ImageDebugStop.png" />
+  </ItemGroup>
+  <ItemGroup>
     <Resource Include="Images\ImageEditCopy.png" />
   </ItemGroup>
   <ItemGroup>
